[package]
name = "wgpu"
version = "0.3.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"
description = "Rusty wgpu API wrapper"
homepage = "https://github.com/gfx-rs/wgpu-rs"
repository = "https://github.com/gfx-rs/wgpu-rs"
keywords = ["graphics"]
license = "MPL-2.0"

[lib]

[features]
default = []
metal = ["wgn/gfx-backend-metal"]
dx11 = ["wgn/gfx-backend-dx11"]
dx12 = ["wgn/gfx-backend-dx12"]
vulkan = ["wgn/gfx-backend-vulkan"]
gl = ["wgn/gfx-backend-gl"]

[dependencies]
#TODO: only depend on the published version
wgn = { package = "wgpu-native", version = "0.2.6", features = ["local", "window-winit"], git = "https://github.com/m4b/wgpu", rev = "9d4dd6587989ef4f297cad321f6acb7b575d6682" }
arrayvec = "0.4"

[dev-dependencies]
cgmath = "0.17"
env_logger = "0.6"
glsl-to-spirv = "0.1"
log = "0.4"
png = "0.15"

[patch.crates-io]
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "cc6a04933082685521482faf5bc38d69e1b70f2e" }
